<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.secondPoint.SecondPointFragment">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/atras"
        app:tint="@color/secondary"
        android:padding="7dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/prox" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/segundo_punto"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <TextView
        android:id="@+id/txtContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"
        app:layout_constraintVertical_bias="0"
        android:text="@string/textContentSecondPoint"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <EditText
        android:id="@+id/etTextTo"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="texto"
        android:textColor="@color/white"
        android:background="@drawable/edittext_background"
        android:hint="@string/digite_un_texto"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContent"
        app:layout_constraintVertical_bias="0.05" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnToast"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/secondary"
        android:text="@string/Siguiente"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTextTo"
        app:layout_constraintVertical_bias="0"
        app:rippleColor="@color/primaryLigth"
        app:strokeColor="@color/primary"
        app:strokeWidth="1dp" />


</androidx.constraintlayout.widget.ConstraintLayout>